src/objects/Financing_Product_Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Alpha__c</fullName>
        <label>Alpha</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_PPA_Rate__c</fullName>
        <label>Base PPA Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Beta__c</fullName>
        <label>Beta</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer_Name__c</fullName>
        <formula>Community_Program_Offer__r.Name</formula>
        <label>Community Program Offer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Program_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Program Offer</label>
        <referenceTo>Community_Program_Offer__c</referenceTo>
        <relationshipLabel>Financing Products Pricing</relationshipLabel>
        <relationshipName>Financing_Products_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Tier__c</fullName>
        <label>Credit Tier</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delta__c</fullName>
        <label>Delta</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Epsilon__c</fullName>
        <label>Epsilon</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalator__c</fullName>
        <label>Escalator</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gamma__c</fullName>
        <label>Gamma</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_PPA_Rate_Adder__c</fullName>
        <label>High PPA Rate Adder ($/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>High_PPA_Rate_Threshold__c</fullName>
        <label>High PPA Rate Threshold ($/W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ineligibility_Threshold__c</fullName>
        <label>Ineligibility Threshold ($/W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Lease Fund</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>Financing Products Pricing</relationshipLabel>
        <relationshipName>Financing_Products_Pricing</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maximum_System_Size_kW__c</fullName>
        <label>Maximum System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_System_Size_kW__c</fullName>
        <label>Minimum System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPA_Rate_EPC__c</fullName>
        <label>PPA Rate EPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Panel Type</label>
        <referenceTo>System_Design_Product__c</referenceTo>
        <relationshipLabel>Financing Products Pricing</relationshipLabel>
        <relationshipName>Financing_Products_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prepaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed-Rate PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio PPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Region</label>
        <referenceTo>Pricing_Region__c</referenceTo>
        <relationshipLabel>Financing Products Pricing</relationshipLabel>
        <relationshipName>Financing_Products_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SREC_Sold_to_Third_Party__c</fullName>
        <label>SREC Sold to Third Party?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Size_Adder__c</fullName>
        <label>Size Adder ($/kWh)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Size_Threshold__c</fullName>
        <label>Size Threshold (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Starting_Rate_Tier__c</fullName>
        <label>Starting Rate Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <formula>State__r.Name</formula>
        <label>State Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Financing Products Pricing</relationshipLabel>
        <relationshipName>Financing_Products_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier_1_EPC__c</fullName>
        <label>Tier 1 EPC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_1_PPA_Rate__c</fullName>
        <label>Tier 1 PPA Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_1_Threshold__c</fullName>
        <label>Tier 1 Threshold ($/W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_EPC__c</fullName>
        <label>Tier 2 EPC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_PPA_Rate__c</fullName>
        <label>Tier 2 PPA Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_Threshold__c</fullName>
        <label>Tier 2 Threshold ($/W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_3_EPC__c</fullName>
        <label>Tier 3 EPC</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_3_PPA_Rate__c</fullName>
        <label>Tier 3 PPA Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_3_Threshold__c</fullName>
        <label>Tier 3 Threshold ($/W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Name__c</fullName>
        <formula>Utility_Company__r.Name</formula>
        <label>Utility Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utility Company</label>
        <referenceTo>Utility_Company_master__c</referenceTo>
        <relationshipLabel>Financing Products Pricing</relationshipLabel>
        <relationshipName>Financing_Products_Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Financing Product Pricing</label>
    <nameField>
        <label>Financing Product Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financing Products Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>